--- a/template.yml
+++ b/template.yml
@@ -1,13 +1,19 @@
-Transform: AWS::Serverless-2016-10-31
-Description:
+Description: Hemp Conduit API Handler for the user domain.
 Resources:
   handler:
-    Type: AWS::Lambda::Function
     Properties:
-      Handler:
-      CodeUri:
-      MemorySize:
-      Runtime:
-      Timeout:
+      CodeUri: .
       Environment:
         Variables:
+          USER_TABLE: hemp_conduit_user
+          USER_PROFILE_TABLE: hemp_conduit_user_profile
+          USER_PASSWORD_TABLE: hemp_conduit_user_password
+          PRODUCT_TABLE: hemp_conduit_product
+          ADDRESS_TABLE: hemp_conduit_address
+          ORDER_TABLE: hemp_conduit_order
+      Handler: main
+      MemorySize: 512
+      Runtime: go1.x
+      Timeout: 30
+    Type: AWS::Lambda::Function
+Transform: AWS::Serverless-2016-10-31
