--- a/template.yml
+++ b/template.yml
@@ -1,21 +1,13 @@
-Description: user handler
+Description:
 Resources:
   handler:
     Properties:
       CodeUri: .
       Environment:
         Variables:
-          STAGE: debug
-          USER_TABLE: hemp_conduit_user
-          USER_PROFILE_TABLE: hemp_conduit_user_profile
-          USER_EMAIL_TABLE: hemp_conduit_user_email
-          USER_PASSWORD_TABLE: hemp_conduit_user_password
-          PRODUCT_TABLE: hemp_conduit_product
-          ADDRESS_TABLE: hemp_conduit_address
-          ORDER_TABLE: hemp_conduit_order
-      Handler: main
-      MemorySize: 512
-      Runtime: go1.x
-      Timeout: 30
+      Handler:
+      MemorySize:
+      Runtime:
+      Timeout:
     Type: AWS::Lambda::Function
 Transform: AWS::Serverless-2016-10-31
